--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'"
     [opened]="(isHandset$ | async) === false"
   >
-    Sidebar Content
+    <app-navigation></app-navigation>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
