--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,10 @@
         <mat-icon>menu</mat-icon>
       </button>
 
-      MEAN Material Auth App
+      <div>
+        <div>{{ headline.title }}</div>
+        <div class="description">{{ headline.description }}</div>
+      </div>
     </mat-toolbar>
 
     <main>
