--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,1 +1,14 @@
-<p>signin works!</p>
+<form [formGroup]="loginForm" (submit)="save(loginForm.value)" class="loginForm">
+  <p>
+    <mat-form-field>
+      <input matInput type="email" formControlName="email" placeholder="E-Mail">
+    </mat-form-field>
+  </p>
+  <p>
+    <mat-form-field>
+      <input matInput type="password" formControlName="password" placeholder="Passwort">
+    </mat-form-field>
+  </p>
+
+  <button mat-raised-button [disabled]="!loginForm.valid">Login</button>
+</form>
